deployments/pathweb/workloads/home-network/esphome/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  selector: {}
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name":"esphome-iot-network"}]'
    spec:
      priorityClassName: rfhome-low-priority
      runtimeClassName: gvisor
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: esphome
        image: esphome/esphome
        securityContext:
          allowPrivilegeEscalation: false
        command:
        - esphome-device-builder
        args:
        - "--host"
        - "eth0"
        - "--port"
        - "6052"
        - "/config"
        resources:
          requests:
            cpu: 15m
            memory: 105M
          limits:
            # cpu: '3'
            memory: 4G
        ports:
        - containerPort: 6052
          name: http
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /config
          name: data
          subPath: config
        - mountPath: /home
          name: data
          subPath: home
        - mountPath: /piolibs
          name: data
          subPath: piolibs
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: esphome-data
